# security-environment-control-plane

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
.ci/: pytest-suite.json  pytest-timings.json
.github/workflows/: ci.yml
apps/api/: alembic.ini
apps/web/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: PROJECT_CHARTER.md  STATUS.md
docs/adr/: ADR-001-monorepo.md  ADR-002-scenario-versioning.md  ADR-003-plugin-contract.md  ADR-004-approval-gate.md  ADR-005-workflow-engine-boundary.md  ADR-006-execution-targets-and-provider-binding.md  ADR-007-provider-secret-references-and-worker-only-resolution.md  ADR-008-generic-observed-inventory-and-topology.md  ADR-009-network-reservations-and-address-space-policy.md  ADR-010-temporal-dispatch-activation.md  ADR-011-immutable-provisioning-manifests.md  ADR-012-worker-only-provisioning-runner.md  ADR-013-sealed-opentofu-runner-and-lab-activation.md  ADR-014-target-onboarding-and-isolation-models.md  ADR-015-live-readonly-proxmox-collector-design.md  ADR-016-authoring-convergence-environment-version-publication.md  ADR-017-oidc-bearer-authentication.md  ADR-018-oidc-browser-pkce-authentication.md  ADR-019-production-oidc-deployment-operations.md  ADR-020-first-real-disposable-lab-lifecycle.md  ADR-021-remote-state-and-jit-secret-readiness.md  ADR-022-plan-only-activation-and-process-boundary.md  ADR-023-commissioning-automation-foundation.md  ADR-024-operator-deployment-package.md  ADR-025-management-plane-bootstrap.md  ADR-026-automated-management-bootstrap-and-enrollment.md  ADR-027-durable-worker-enrollment-foundation.md
docs/architecture/: secp-001-design.md  secp-002a-proxmox-discovery.md  secp-002b-0-provisioning-safety.md  secp-002b-1a-opentofu-lab-contract.md  secp-002b-1b-2-live-readonly-proxmox-collector.md  secp-002b-1b-real-lab-lifecycle.md  secp-002b-1b-target-onboarding.md  secp-b10-authoring-convergence-publication.md  secp-b2-2-live-secret-resolver-activation.md
docs/design/: SECP_CYBER_UI_REPLICA_SPEC.md
docs/development/: testing.md  (+1 more)
tests/: test_architecture_boundary.py  test_authoring_convergence_design.py  test_b1b_architecture_lock.py  test_ci_workflow.py  test_compose_config.py  test_discovery_boundary.py  test_live_collector_design.py  test_live_secret_resolver_design.py  test_management_plane_boundary.py  test_no_real_endpoints.py  test_pr5f_controller_env_root.py  test_pr5f_discovery_activation_boundary.py  test_pr5f_discovery_activation_root.py  test_pr5h_architecture_guards.py  test_pr5h_contract_guards.py  test_project_status_truthfulness.py  test_provisioning_boundary.py  test_pytest_shards.py  test_python_image_package_closure.py  test_worker_enrollment_contract_boundary.py  test_worker_enrollment_contract_parity.py
(+891 files in other folders)
