[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secp"
version = "0.1.0"
description = "Security Environment Control Platform — control-plane foundation (SECP-001)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "cryptography>=49.0.0",
]

[project.optional-dependencies]
# Temporal is only needed to run the durable worker path. Tests and the inline
# dispatcher do not require it (see ADR-005).
worker = ["temporalio>=1.7"]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
    "types-jsonschema",
    "pip-audit>=2.7",
]

[tool.hatch.build.targets.wheel]
# Multiple top-level packages live across the monorepo (see ADR-001). Their
# directory basenames become the importable package names.
packages = [
    "apps/api/secp_api",
    "apps/worker/secp_worker",
    "contracts/scenario-schema/secp_scenario_schema",
    "contracts/plugin-api/secp_plugin_api",
    "plugins/simulator/secp_plugin_simulator",
    "plugins/proxmox/secp_plugin_proxmox",
]

[tool.hatch.build.targets.wheel.force-include]
"contracts/scenario-schema/secp_scenario_schema/v1alpha1/schema.json" = "secp_scenario_schema/v1alpha1/schema.json"

[tool.uv]
package = true

[tool.pytest.ini_options]
# Belt-and-suspenders for local runs: make every monorepo package importable
# without relying solely on the editable install.
pythonpath = [
    "apps/api",
    "apps/worker",
    "contracts/scenario-schema",
    "contracts/plugin-api",
    "plugins/simulator",
    "plugins/proxmox",
]
testpaths = ["apps/api/tests", "tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["apps/web", ".venv", "**/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "B008",   # FastAPI uses function calls in argument defaults (Depends)
    "UP042",  # `(str, Enum)` is intentional for pydantic-friendly string enums
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
mypy_path = [
    "apps/api",
    "apps/worker",
    "contracts/scenario-schema",
    "contracts/plugin-api",
    "plugins/simulator",
    "plugins/proxmox",
]
explicit_package_bases = true
check_untyped_defs = true
exclude = ["apps/web", "migrations/versions", ".venv"]
